fix a size on mobile view

--- a/themes/grav-theme-howto/css/media-queries.css
+++ b/themes/grav-theme-howto/css/media-queries.css
@@ -22,6 +22,10 @@
 
 @media only screen and (max-width: 830px) {
 
+  a {
+    font-size: 85%;
+  }
+
   .narrow {
    max-width: 100%;
    margin: 0 auto
@@ -169,6 +173,7 @@
   ------------------------------------*/
 
 @media only screen and (max-width: 600px) {
+
 
   /* Language menu*/
 
